# bevy-games

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: game-request.md
.github/workflows/: clippy.yml  rust.yml
breakout/: Cargo.toml
breakout/src/: main.rs
breakout/src/game/: components.rs  mod.rs  systems.rs
common/: Cargo.toml
common/src/: events.rs  lib.rs  systems.rs
common/src/game/: mod.rs
dino/: Cargo.toml
dino/src/: main.rs  systems.rs
dino/src/game/: mod.rs
flappy/: Cargo.toml
flappy/src/: main.rs
flappy/src/game/: components.rs  mod.rs  resources.rs  systems.rs
froggers/: Cargo.toml
froggers/src/: main.rs
froggers/src/game/: components.rs  mod.rs  resources.rs  systems.rs
inkspill/: Cargo.toml
inkspill/src/: main.rs  systems.rs
inkspill/src/game/: components.rs  mod.rs  resources.rs  systems.rs
minesweeper/: Cargo.toml
minesweeper/src/: main.rs
minesweeper/src/game/: components.rs  mod.rs  resources.rs  systems.rs
sliding-puzzle/: Cargo.toml
sliding-puzzle/src/: main.rs
sliding-puzzle/src/game/: mod.rs  resources.rs  systems.rs
snake/: Cargo.toml
snake-game/: Cargo.toml  todo.txt
snake-game/src/: events.rs  main.rs  systems.rs
snake-game/src/game/: mod.rs  resources.rs
snake-game/src/menu/: interactions.rs  (+3 more)
snake/src/: main.rs  systems.rs
space-invaders/: Cargo.toml
space-invaders/src/: main.rs
twenty-48/: Cargo.toml
twenty-48/src/: main.rs  system.rs
www/: 2048.html  dino.html  flappy.html  index.html  inkspill.html  snake.html  space-invaders.html  styles.css
(+100 files in other folders)
