[workspace]
resolver = "2"

members = [
    "breakout",
    "common",
    "dino",
    "flappy",
    "froggers",
    "inkspill",
    "minesweeper",
    "sliding-puzzle",
    "snake",
    "space-invaders",
    "tetris",
    "twenty-48",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
