[package]
name = "flappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["wayland"] }
bevy_prototype_debug_lines = "0.11"
rand = "0.8.5"
common = { path = "../common" }
