[package]
name = "sliding-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["wayland"] }
rand = "0.8.5"
ndarray = "0.15.6"
common = { path = "../common" }
